BUGFIX the line-height in ViewerPageLine cropped the text a bit

--- a/src/components/view/ViewerPageLine.module.css
+++ b/src/components/view/ViewerPageLine.module.css
@@ -11,7 +11,6 @@
 .title {
   vertical-align: middle;
   font-weight: bold;
-  line-height: 1;
   font-size: calc(3.5 * var(--basis));
 
   white-space: nowrap;
